@@ -18,7 +18,7 @@
 
   <!ENTITY dhbinary    "boincmgr">
   <!ENTITY dhdate      "<date>April 14, 2007</date>">
-  
+
   <!ENTITY debian      "<productname>Debian</productname>">
   <!ENTITY gnu         "<acronym>GNU</acronym>">
   <!ENTITY gpl         "&gnu; <acronym>GPL</acronym>">
@@ -47,7 +47,7 @@
     <refentrytitle>&dhbinary;</refentrytitle>
     <manvolnum>1</manvolnum>
   </refmeta>
-  
+
   <refnamediv>
     <refname>&dhbinary;</refname> 
     <refpurpose>The graphical BOINC manager for the core client.</refpurpose>
@@ -58,7 +58,7 @@
       <command>&dhbinary;</command>
     </cmdsynopsis>
   </refsynopsisdiv>
-  
+
   <refsect1>
     <title>DESCRIPTION</title>
     <para>The BOINC manager (<command>&dhbinary;</command>) is a controling
@@ -98,7 +98,7 @@
           <para>Startup BOINC with these optional arguments.</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term><option>-i, --insecure</option></term>
         <listitem>
@@ -110,8 +110,8 @@
 
   <refsect1>
     <title>SEE ALSO</title>
-    <para><ulink url="http://boinc.berkeley.edu/manager.php"
-      >http://boinc.berkeley.edu/manager.php</ulink></para>
+    <para><ulink url="http://boinc.berkeley.edu/trac/wiki/ManagerAdvanced"
+      >http://boinc.berkeley.edu/trac/wiki/ManagerAdvanced</ulink></para>
   </refsect1>
 
   <refsect1>
